tests/rosetta/out/Java/averages-median-2.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/averages-median-2.mochi:28:27: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/averages-median-2.mochi:28:27

 28 |     return (med + arr[half-1]) / 2.0
    |                           ^

help:
  Parse error occurred. Check syntax near this location.